// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BoolField> tests <BoolField> - rendering - disabled 1`] = `
"<FormGroup fieldId='id'>
    <Checkbox
      isChecked={hire}
      isDisabled={true}
      id={'id'}
      name={'hire'}
      label={'Hire?'}
      onChange={(e, newValue) => set__hire(newValue)}
    />
  </FormGroup>"
`;

exports[`<BoolField> tests <BoolField> - rendering 1`] = `
"<FormGroup fieldId='id'>
    <Checkbox
      isChecked={hire}
      isDisabled={false}
      id={'id'}
      name={'hire'}
      label={'Hire?'}
      onChange={(e, newValue) => set__hire(newValue)}
    />
  </FormGroup>"
`;
